デザイン修正

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,14 @@
 @import "bootstrap";
+
+body {
+  background: image-url('bg.jpg') no-repeat center center fixed;
+  padding: 60px 60px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#photos {
+  padding-top: 20px;
+}
