--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,5 +1,4 @@
-<h1 class="text-center" >Yasubee Friends</h1>
-
+<h1 class="text-center" >#YasubeeFriends</h1>
 <div id="photos">
   <%= render partial: 'tweet', collection: @tweets %>
 </div>
