--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,7 +1,16 @@
 <div class="col-xs-12 col-sm-6 col-md-4">
+
   <div class="thumbnail">
       <%= image_tag(tweet.img_url, class: 'img-rounded') %>
-      <div class="caption">
+
+      <div class="user-info">
+        <h3 class="user-name">
+          <span class="screen-name" style="font-size: 12px;">
+            <%= link_to "@"+tweet.screen_name, "https://twitter.com/"+tweet.screen_name ,:target => '_blank' %>
+          </span>
+        </h3>
+      </div>
+      <div class="tweet-text">
         <p>
           <%= truncate(tweet.text, length: 100) if tweet.text %>
         </p>
