--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,7 +1,10 @@
 <div class="col-xs-12 col-sm-6 col-md-4">
 
   <div class="thumbnail">
-      <%= image_tag(tweet.img_url, class: 'img-rounded') %>
+
+      <%= link_to(tweet_url(tweet),:target => '_blank') do %>
+        <%= image_tag(tweet.img_url, class: 'img-rounded') %>
+      <% end %>
 
       <div class="user-info">
         <h3 class="user-name">
@@ -10,10 +13,12 @@
           </span>
         </h3>
       </div>
+
       <div class="tweet-text">
         <p>
           <%= truncate(tweet.text, length: 100) if tweet.text %>
         </p>
       </div>
+
   </div>
 </div>
