ページャー機能の追加

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -8,7 +8,7 @@
 
       <div class="user-info">
         <h3 class="user-name">
-          <span class="screen-name" style="font-size: 12px;">
+          <span class="screen-name">
             <%= link_to "@"+tweet.screen_name, "https://twitter.com/"+tweet.screen_name ,:target => '_blank' %>
           </span>
         </h3>
