--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -10,5 +10,11 @@
     </div>
   <% end %>
 
+  <div class="row text-center">
+    <div class="col-xs-12 col-sm-12 col-md-12">
+      <%= paginate(@tweets) %>
+    </div>
+  </div>
+
 </div>
 
