タイトルの位置を変更

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,7 @@
-<h1 class="text-center" >#YasubeeFriends</h1>
+<h1 class="text-center" >
+  <%= link_to "#YasubeeFriends", root_path %>
+</h1>
+
 <div id="photos">
 
   <% itr = @tweets.each %>
